--- a/views/messagerie.ejs
+++ b/views/messagerie.ejs
@@ -6,7 +6,9 @@
 
     <body>
         <%- include('./partials/header'); -%>     
+
         <div id="messagerie" class="col-md-12 row">
+
             <h1 class="col-sm-12 col-md-12 text-center titre_page">Messagerie</h1>
             <div class="col-md-12">
                 <div class="row">
@@ -23,6 +25,13 @@
 
                     <!--  Colonne de droite  -->
                     <div class="col-8">
+<!--
+                        <div class=" col-md-12 alert alert-warning " id="response" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+-->
                         <div class="tab-content" id="nav-tabContent">
                             <!--  Détail conseration  -->
                             <div class="tab-pane fade show active afficheConversation" id="list-home" role="tabpanel" aria-labelledby="messages">
@@ -49,7 +58,7 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
             <script src="/socket.io/socket.io.js"></script>
 
-            
+
 
         </div>
 
