--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 
-        <header class="col-md-12">
+        <header class="col-md-12 row">
             <div class="offset-3 col-9 col-md-3 offset-md-9 row" id="inscription_connexion">
                 <a href="#"><p class="col-md-6 menu_inscription">Inscription</p></a>
                 <a href="#"><p class="col-md-6 menu_connexion">Connexion</p></a>
