--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -108,10 +108,11 @@
                                          <label for="quickReplyFormComment">Your comment</label>
                                          <textarea class="form-control" id="quickReplyFormComment" rows="5" name="commentaire"></textarea>
                                          <div class="text-center my-4">
-                                         <button class="btn btn-info btn-sm" type="submit">Post</button>
+                                         <button id="postercom" class="btn btn-info btn-sm" type="submit">Post</button>
                                          </form>
                                          </div>
                                           </div>
+                                          <div id="containComment">
                                          <% for(var i=0; i < avis.length; i++) { %>
                                             <div class="media d-block d-md-flex mt-4">
                                             <img class="card-img-64 rounded z-depth-1 d-flex mx-auto mb-3"
@@ -130,7 +131,7 @@
                                             </div>
                                         </div>
                                          <% } %>
-
+                                        </div>
 
 
                                     </section>
