--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,6 +6,7 @@
         <script src="javascripts/register.js"></script>
         <script src="javascripts/autocomplete.js"></script>
         <script src="javascripts/messagerie.js"></script>
+        <script src="javascripts/demande.js"></script>
         <!--  Modal   connexion -->
         <div class="modal fade" id="Modalconnexion" tabindex="-1" role="dialog" aria-labelledby="Modalconnexion"  aria-hidden="true" >
             <div class="modal-dialog modal-dialog-centered" role="document">
